# CampaignExpress

./: .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  REVIEW_SUMMARY.md  SECURITY.md  SECURITY_FINDINGS.md  quickstart.sh
.github/workflows/: ci.yml
benches/: inference_bench.rs
blueprints/: README.md
blueprints/mobile-app/: .env.example  app.json  package.json
blueprints/mobile-app/src/: App.tsx
blueprints/web-app/: .env.example  next.config.js  package.json
crates/admin-console/: Cargo.toml
crates/admin-console/src/: feature_flags.rs  lib.rs  notifications.rs  provider_dashboard.rs  system_settings.rs  tenant_ops.rs  user_ops.rs
crates/agentic-testing/: Cargo.toml
crates/agentic-testing/src/: actions.rs  agent.rs  assertions.rs  lib.rs  page_objects.rs  reporter.rs  scenario.rs
crates/agents/: Cargo.toml
crates/agents/src/: agent.rs  batcher.rs  lib.rs  manager.rs  processor.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs  logger.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: channel_rest.rs  dsp_rest.rs  grpc.rs  lib.rs  loyalty_rest.rs  rest.rs  server.rs  swagger.rs
crates/billing/: Cargo.toml
crates/billing/src/: billing.rs  lib.rs  metering.rs  onboarding.rs
crates/cache/: Cargo.toml
crates/cache/src/: client.rs  lib.rs  local.rs
crates/cdp/: Cargo.toml
crates/cdp/src/: adapters.rs  connector_runtime.rs  feature_store.rs  identity.rs  lib.rs  sync_engine.rs  types.rs
crates/channels/: Cargo.toml
crates/channels/src/: activation.rs  content_cards.rs  content_studio.rs  email.rs  in_app.rs  ingest.rs  lib.rs  sms.rs  templates.rs  web_push.rs  whatsapp.rs
crates/core/: Cargo.toml
crates/core/src/: channels.rs  config.rs  dsp.rs  error.rs  event_bus.rs  experimentation.rs  inference.rs  journey.rs  lib.rs  loyalty.rs  openrtb.rs  templates.rs  types.rs
crates/dco/: Cargo.toml
crates/dco/src/: assembler.rs  asset_ops.rs  brand.rs  creative_export.rs  engine.rs  lib.rs  scorer.rs  studio.rs  types.rs
crates/devops-toolkit/: Cargo.toml
crates/devops-toolkit/src/: auto_remediation.rs  capacity_planner.rs  diagnostics.rs  health_checker.rs  incident_detector.rs  lib.rs  log_analyzer.rs  resource_monitor.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: audience_proxy.rs  clients.rs  lib.rs  router.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: bi_tools.rs  capabilities.rs  connector.rs  dam.rs  lib.rs  marketplace.rs  task_management.rs  webhook.rs
crates/intelligent-delivery/: Cargo.toml
crates/intelligent-delivery/src/: frequency_capping.rs  lib.rs  quiet_hours.rs  send_time.rs  suppression.rs  throttle.rs
crates/journey/: Cargo.toml
crates/journey/src/: engine.rs  evaluator.rs  lib.rs  state_machine.rs  types.rs
crates/licensing/: Cargo.toml
crates/licensing/src/: dashboard.rs  lib.rs
crates/loyalty/: Cargo.toml
crates/loyalty/src/: engine.rs  lib.rs
crates/management/: Cargo.toml
crates/management/src/: auth.rs  governance.rs  handlers.rs  lib.rs  models.rs  preflight.rs  router.rs  store.rs  workflows.rs  workspace.rs
crates/mobile-sdk/: Cargo.toml
crates/mobile-sdk/src/: config.rs  device.rs  events.rs  lib.rs  sessions.rs
crates/npu-engine/: Cargo.toml
crates/npu-engine/src/: engine.rs  lib.rs  model.rs
crates/npu-engine/src/backends/: ampere.rs  cpu.rs  groq.rs  inferentia.rs  mod.rs  tenstorrent.rs
crates/ops/: Cargo.toml
crates/ops/src/: backup.rs  incident.rs  lib.rs  sla.rs  status_page.rs
crates/personalization/: Cargo.toml
crates/personalization/src/: catalog.rs  connected_content.rs  decisioning.rs  lib.rs  recommendations.rs  templating.rs
crates/platform/: Cargo.toml
crates/platform/src/: audit.rs  auth.rs  governance.rs  lib.rs  privacy.rs  rate_limit.rs  rbac.rs  tenancy.rs
crates/plugin-marketplace/: Cargo.toml
crates/plugin-marketplace/src/: developer.rs  lib.rs  registry.rs  sandbox.rs  store.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: attribution.rs  budget.rs  cohort.rs  dashboard.rs  funnel.rs  lib.rs  measurement.rs  report_builder.rs
crates/rl-engine/: Cargo.toml
crates/rl-engine/src/: bandits.rs  contextual.rs  explainability.rs  guardrails.rs  holdout.rs  lib.rs  offerfit.rs
crates/sdk-docs/: Cargo.toml
crates/sdk-docs/src/: api_reference.rs  examples.rs  guides.rs  lib.rs  search.rs
crates/segmentation/: Cargo.toml
crates/segmentation/src/: builder.rs  computed.rs  engine.rs  lib.rs  predicates.rs
crates/wasm-edge/: Cargo.toml
crates/wasm-edge/src/: lib.rs
crates/web-sdk/: Cargo.toml
crates/web-sdk/src/: clickstream.rs  collector.rs  events.rs  lib.rs
deploy/aws/: deploy-aws.sh  external-secrets-aws.yaml  neuron-device-plugin.yaml  ui-deployment.yaml  ui.Dockerfile  values-aws.yaml
deploy/aws/terraform/: main.tf  outputs.tf  variables.tf
deploy/clickhouse/: clickhouse-deployment.yaml
deploy/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
deploy/haproxy/: haproxy-deployment.yaml  haproxy.cfg
deploy/helm/campaign-express/: Chart.yaml  values.yaml
deploy/k8s/base/: cert-manager.yaml  configmap.yaml  deployment.yaml  external-secrets.yaml  hpa.yaml  pdb.yaml  (+6 more)
deploy/nats/: nats-deployment.yaml
deploy/redis/: redis-deployment.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BRD.md  DEPLOYMENT.md  INFRASTRUCTURE.md  LOCAL_DEPLOYMENT.md  MANUAL_TEST_CASES.md  MARKETER_GUIDE.md  ML_ENGINEER_GUIDE.md  PREREQUISITES.md  QUICKSTART_WINDOWS.md  REQUEST_FLOW.md  RUST_ENGINEER_GUIDE.md  SAAS_OPERATIONS.md  SRE_GUIDE.md  TEST_STRATEGY.md
proto/: bidding.proto
scripts/: load-test.sh  local-setup.sh  quickstart.ps1  setup-nats-streams.sh  setup.sh
scripts/seed/: clickhouse-schema.sql  redis-seed.sh
scripts/startup/: common.sh
src/campaign-express/: Cargo.toml
src/campaign-express/src/: main.rs
src/license-admin/: Cargo.toml
src/license-admin/src/: main.rs
tests/integration/: bid_flow_test.rs
ui/: package.json  playwright.config.ts  tailwind.config.ts
ui/e2e/: chrome-compat.spec.ts
(+79 files in other folders)
