[package]
name = "campaign-agents"
version.workspace = true
edition.workspace = true

[dependencies]
campaign-core = { workspace = true }
campaign-npu = { workspace = true }
campaign-cache = { workspace = true }
campaign-analytics = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-nats = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
