[package]
name = "campaign-dsp"
version.workspace = true
edition.workspace = true

[dependencies]
campaign-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
dashmap = { workspace = true }
