[package]
name = "campaign-licensing"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
