[package]
name = "campaign-management"
version.workspace = true
edition.workspace = true

[dependencies]
campaign-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
