[package]
name = "campaign-sdk-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
campaign-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1"
dashmap = "5"
