[package]
name = "license-admin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "license-admin"
path = "src/main.rs"

[dependencies]
campaign-licensing = { path = "../../crates/licensing" }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
